Home, Details and Payment pages

--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -8,10 +8,10 @@
 
 .button:hover,
 .button:focus {
+    outline: none;
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18),
         0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
-
 .button-default {
     color: #fff;
     box-shadow: none;
@@ -43,4 +43,30 @@
     color: #2bbbad;
     background-color: #fff;
     border: 2px solid #2bbbad;
+}
+
+/*Button Success*/
+.button-success {
+    color: #fff;
+    background-color: #00c851;
+}
+
+.button-success:hover,
+.button-success:focus {
+    border-color: #1e7e34;
+}
+
+.button-success:active {
+    border-color: #1c7430;
+    background-color: #006228;
+}
+
+/*Button Cancel*/
+.button-cancel {
+    color: #fff;
+    background-color: #ff7043;
+}
+
+.button-cancel:active {
+    background-color: #dc3500;
 }
